adding share for the plank history
